# GemLanguage

./: CMakeCache.txt  CMakeLists.txt  Gem.h  LICENSE  Makefile  a.out  cmake_install.cmake  compile_main.cpp  gem  gem.c  gemSettings.hpp  gem_interpreter  interpreter_main.cpp  main  main.cpp  main.gem  module.gem  std.gem  test.lua  test.py
backend/: compiler.cpp  compiler.hpp  debugger.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
backend/std/: compare.hpp  values.hpp
backend/templates/: runtime.c
compiler/: README.MD  compiler.cpp  compiler.hpp  ctypes.hpp  gvm.hpp  lexer.cpp  lexer.hpp  native.hpp  parser.cpp  parser.hpp  prettyprint.hpp  types.hpp  vm.cpp  vm.hpp
stdCpp/: Makefile  io.cpp  math.cpp
